<?xml version="1.0" encoding="utf-8"?>
<ScrollView style="@style/fill_fill"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:myRelated="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        style="@style/fill_vertical_linear_layout">
        <RelativeLayout
            android:id="@+id/one"
            style="@style/fill_wrap"
            android:layout_height="230dp"
            android:background="@mipmap/bg_xiaomai_top">
            <ImageView
                android:id="@+id/toppic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@mipmap/icon_unlogin"/>
            <TextView
                android:id="@+id/dianji2"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_below="@+id/toppic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:text="登录 | 注册"
                android:textSize="15sp"/>
            <ImageView
                android:id="@+id/se"
                style="@style/wrap_wrap"
                android:layout_alignParentRight="true"
                android:layout_marginRight="60dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/settings2"/>
            <LinearLayout
                android:id="@+id/have_layout"
                style="@style/fill_wrap"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:id="@+id/tv_uname"
                    style="@style/user_info_tv_style"
                    android:text="用户名"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/tv_isVIP"
                    style="@style/user_info_tv_style"
                    android:layout_below="@+id/tv_uname"
                    android:text="普通会员"
                    android:textSize="12sp"/>
                <LinearLayout
                    style="@style/fill_wrap"
                    android:layout_below="@+id/tv_isVIP">
                    <TextView
                        style="@style/user_integral_tv_style"
                        android:text="50(清零0)积分"/>
                    <TextView
                        style="@style/user_integral_tv_style"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="￥0.00元"
                        android:textColor="@android:color/holo_green_light"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            style="@style/my_related_row_style">
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:myRelatedIcon="@mipmap/icon_my_xiaomai_card"
                myRelated:myRelatedText="@string/ka"/>
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:myRelatedIcon="@mipmap/icon_my_xiaomai_order"
                myRelated:myRelatedText="@string/ding"/>
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:myRelatedIcon="@mipmap/icon_my_xiaomai_address"
                myRelated:myRelatedText="@string/address"
                myRelated:rightLineVisible="true"/>
        </LinearLayout>
        <View style="@style/horizontal_line"/>
        <LinearLayout
            style="@style/my_related_row_style">
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:myRelatedIcon="@mipmap/icon_my_xiaomai_collect"
                myRelated:myRelatedText="@string/xin"/>
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:myRelatedIcon="@mipmap/icon_my_xiaomai_charge"
                myRelated:myRelatedText="@string/chong"/>
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:myRelatedIcon="@mipmap/icon_my_xiaomai_safety"
                myRelated:myRelatedText="@string/an"
                myRelated:rightLineVisible="true"/>
        </LinearLayout>
        <View style="@style/horizontal_line"/>
        <LinearLayout
            style="@style/my_related_row_style">
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:myRelatedIcon="@mipmap/icon_my_xiaomai_help"
                myRelated:myRelatedText="@string/bang"/>
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"/>
            <com.cofcowomai.wodexiaomai.MyRelatedItemView
                style="@style/my_related_item"
                myRelated:rightLineVisible="true"/>
        </LinearLayout>
        <View style="@style/horizontal_line"/>
    </LinearLayout>
</ScrollView>