<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/kk" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="15dp"
            android:text="@string/sz"
            android:textColor="@android:color/background_dark"
            android:textSize="20dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/voice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/ggxx"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_weight="0.04">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/edit">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/yjfk"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/default_ptr_rotate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/bbjc"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"

            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/push_icon">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/tskg"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/on" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ON"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="-95dp"
            android:layout_marginTop="17dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/fxzh"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_weight="0.04">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/delete_big">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/qchc"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="43dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/gy"
            android:textColor="@android:color/background_dark"
            android:textSize="15dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginLeft="210dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="340dp"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray">

        </View>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="43dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/telphone" />

            <TextView
                android:id="@+id/kefdh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/kfdh"
                android:textColor="@android:color/background_dark"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/arrow_right" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-140dp"
                android:text="@string/zouji"
                android:layout_marginTop="17dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/exit_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_below="@+id/layout_four"
                android:background="@color/green"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:layout_margin="10dp"
                android:text="退出登录"/>
        </LinearLayout>
</LinearLayout>
 </ScrollView>
